# Trailer_LTV_MPC

./: .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: controller.yaml  default.yaml  path.yaml  simulation.yaml  vehicle.yaml
configs/validation_cases/: docking_case.yaml  forward_correction_case.yaml  matlab_comparison_case.yaml  straight_reverse.yaml
docs/: CLEANUP_PLAN.md  PROJECT_CONTEXT.md  ROADMAP.md
docs/agent_docs/: conventions.md  gates.md  model_equations.md  validation_checklist.md
docs/agent_prompts/: experiment_summary_agent.md  implementation_agent.md  planning_agent.md  reviewer_agent.md  validation_agent.md
examples/: __init__.py  demo_planner.py  run_basic_cases.py
src/trailer_controller/: __init__.py  forward_correction.py  ltv_model.py  mapping.py  math_utils.py  models.py  qp_solver.py  reference_builder.py  speed_profile.py  trailer_ltv_mpc.py
src/trailer_ltv_mpc/: __init__.py  config.py  config_loader.py  forward_correction.py  geometry.py  mapping.py  models.py  path_reference.py  qp_solver.py  trailer_ltv_mpc.py
tests/: __init__.py  run_smoke.py  test_controller_step.py  test_forward_correction.py  test_geometry.py  test_ltv_model.py  test_mapping.py  test_qp_assembly.py  test_reference_builder.py  test_speed_profile.py
tests/closed_loop/: __init__.py  test_forward_correction_validation.py  test_path_generation.py  (+3 more)
validation/: __init__.py  closed_loop.py  compare_matlab_spline_runs.py  path_generation.py  plotting.py  run_closed_loop_case.py  run_forward_correction_case.py  run_tracking_diagnostics.py
(+10 files in other folders)
