[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trailer-ltv-mpc"
version = "0.1.0"
description = "Python Trailer LTV MPC controller and validation package for front-hitch tractor-trailer systems"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "PyYAML>=6.0",
    "scipy>=1.10",
    "osqp>=0.6",
]

[project.optional-dependencies]
dev = [
    "matplotlib>=3.8",
    "pytest>=7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    "ignore:\"polish\" is deprecated:DeprecationWarning:osqp.interface",
    "ignore:The default value of raise_error will change to True in the future:PendingDeprecationWarning:osqp.interface",
]
